--- a/index.html
+++ b/index.html
@@ -3,12 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Startup</title>
+<!--    <link rel="preconnect" href="https://fonts.googleapis.com">-->
+<!--    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+<!--    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="wrapper">
-    <h1>Hello world!</h1>
+    <section class="main_banner" id="home">
+        <div class="container">
+            <header class="header">
+                <a href="/" class="logo">
+                    Startup
+                </a>
+                <nav class="navigation">
+                    <a href="#home">Home</a>
+                    <a href="#services">Services</a>
+                    <a href="#about">About</a>
+                    <a href="#works">Works</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#clients">Clients</a>
+                    <a href="#contact">Contact</a>
+                </nav>
+            </header>
+            <div class="banner_text">
+
+            </div>
+        </div>
+    </section>
+    <section id="services"></section>
+    <section id="about"></section>
+    <section id="works"></section>
+    <section id="blog"></section>
+    <section id="clients"></section>
+    <section id="contact"></section>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
