--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startup</title>
-<!--    <link rel="preconnect" href="https://fonts.googleapis.com">-->
-<!--    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
-<!--    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">-->
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<div class="wrapper">
-    <section class="main_banner" id="home">
-        <div class="container">
-            <header class="header">
-                <a href="/" class="logo">
-                    Startup
-                </a>
-                <nav class="navigation">
-                    <a href="#home">Home</a>
-                    <a href="#services">Services</a>
-                    <a href="#about">About</a>
-                    <a href="#works">Works</a>
-                    <a href="#blog">Blog</a>
-                    <a href="#clients">Clients</a>
-                    <a href="#contact">Contact</a>
-                </nav>
-            </header>
-            <div class="banner_text">
-
-            </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Startup</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <section class="main_banner" id="home">
+                <div class="container">
+                    <header class="header">
+                        <a href="/" class="logo">
+                            Startup
+                        </a>
+                        <nav class="navigation">
+                            <span class="mobile-menu"></span>
+                            <div class="menu">
+                                <a href="#home">Home</a>
+                                <a href="#services">Services</a>
+                                <a href="#about">About</a>
+                                <a href="#works">Works</a>
+                                <a href="#blog">Blog</a>
+                                <a href="#clients">Clients</a>
+                                <a href="#contact">Contact</a>
+                            </div>
+                        </nav>
+                    </header>
+                    <div class="banner_text">
+                        <div class="container">
+                            <h1>Welcome to STARTUP</h1>
+                            <h2>Your Favourite Creative Agency Template</h2>
+                            <a class="button">
+                                Get Started
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="services"></section>
+            <section id="about"></section>
+            <section id="works"></section>
+            <section id="blog"></section>
+            <section id="clients"></section>
+            <section id="contact"></section>
         </div>
-    </section>
-    <section id="services"></section>
-    <section id="about"></section>
-    <section id="works"></section>
-    <section id="blog"></section>
-    <section id="clients"></section>
-    <section id="contact"></section>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
-</body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
