--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -42,13 +43,130 @@
                 </div>
             </section>
             <section id="services"></section>
-            <section id="about"></section>
+            <section id="about">
+                <div class="container">
+                    <div class="swiper gallery">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="about-img-wrapper">
+                                    <img src="./images/team1.jpg" alt="Rubel Miah">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="about-name">Rubel Miah</div>
+                                <div class="about-position">Lead WordPress Developer</div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="about-img-wrapper">
+                                    <img src="./images/team1.jpg" alt="Rubel Miah">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="about-name">Rubel Miah</div>
+                                <div class="about-position">Lead WordPress Developer</div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="about-img-wrapper">
+                                    <img src="./images/team1.jpg" alt="Rubel Miah">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="about-name">Rubel Miah</div>
+                                <div class="about-position">Lead WordPress Developer</div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="about-img-wrapper">
+                                    <img src="./images/team1.jpg" alt="Rubel Miah">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="about-name">Rubel Miah</div>
+                                <div class="about-position">Lead WordPress Developer</div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="about-img-wrapper">
+                                    <img src="./images/team1.jpg" alt="Rubel Miah">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="./images/twitter.png" alt="twitter"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="about-name">Rubel Miah</div>
+                                <div class="about-position">Lead WordPress Developer</div>
+                            </div>
+                        </div>
+
+
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                </div>
+            </section>
             <section id="works"></section>
             <section id="blog"></section>
             <section id="clients"></section>
             <section id="contact"></section>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
