--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <div class="container">
                     <div class="service_content">
                         <div class="service_offer">
-                            <h2>
+                            <h2 class="title-20">
                                 Services
                             </h2>
-                            <img src="./images/shape.jpg" alt="Shape" id="shape">
+                            <img src="./images/shape.jpg" alt="Shape" class="shape">
                             <h4>
                                 We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
                             </h4>
@@ -96,10 +96,10 @@
             <section id="about">
                 <div class="container">
                     <div class="about_description">
-                        <h2>
+                        <h2 class="title-20">
                             About us
                         </h2>
-                        <img src="./images/shape.jpg" alt="Shape" id="shape">
+                        <img src="./images/shape.jpg" alt="Shape" class="shape">
                         <h4>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
                         </h4>
@@ -205,7 +205,287 @@
                     </div>
                 </div>
             </section>
-            <section id="works"></section>
+            <section id="works">
+                <div class="container">
+                    <h2  class="title-20">
+                        Latest works
+                    </h2>
+                    <img src="./images/shape.jpg" alt="Shape" class="shape">
+
+                    <div id="tabs">
+                        <ul class="tabs-nav">
+                            <li><a href="#tab-1">All</a></li>
+                            <li><a href="#tab-2">Branding</a></li>
+                            <li><a href="#tab-3">Design</a></li>
+                            <li><a href="#tab-4">Development</a></li>
+                            <li><a href="#tab-5">Strategy</a></li>
+                        </ul>
+
+                        <div class="tabs-items">
+                            <div class="tabs-item" id="tab-1">
+                                <div class="row">
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tabs-item" id="tab-2">
+                                <div class="row">
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tabs-item" id="tab-3">
+                                <div class="row">
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tabs-item" id="tab-4">
+                                <div class="row">
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tabs-item" id="tab-5">
+                                <div class="row">
+                                    <div class="col-33">
+                                        <div class="col-inner">
+                                            <img src="./images/work1.png" alt="Hair Dresser">
+                                            <div class="work-description">
+                                                <h5>Hair Dresser</h5>
+                                                <div class="work-category">Branding</div>
+                                                <a class="work-button" href="#">View ></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section id="blog"></section>
             <section id="clients"></section>
             <section id="contact"></section>
